[tool.poetry]
name = "orbit-exports"
version = "0.1.0"
description = ""
authors = ["Michele Zuccala <michele@zuccala.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
